cruft-ng (0.9.55~0) UNRELEASED; urgency=medium

  [ Christian Göttsche ]
  * Misc tweaks to rules: chkrootkit, geoipupdate,
    selinux (Closes: #1033804)

  [ NicolasJamar ]
  * refresh misc filters for Debian, Ubuntu & Pop_OS

 -- Alexandre Detiste <alexandre.detiste@gmail.com>  Thu, 09 Mar 2023 00:39:20 +0100

cruft-ng (0.9.54) unstable; urgency=medium

  * fix single file matching feature (Closes: #1030522)

 -- Alexandre Detiste <alexandre.detiste@gmail.com>  Sun, 19 Feb 2023 22:52:47 +0100

cruft-ng (0.9.53) unstable; urgency=medium

  * Use /usr/share/cruft/rules/ as location for new dh-cruft rules
    to avoid that every single package switching to dh-cruft would
    also need to Breaks+Replaces on old cruft-commnon. (See #1030024)
  * make dh-cruft Multi-Arch: foreign as hinted

 -- Alexandre Detiste <alexandre.detiste@gmail.com>  Mon, 30 Jan 2023 20:15:28 +0100

cruft-ng (0.9.52) unstable; urgency=medium

  * Fix FTBFS on buildd: separate -arch and -indep targets.

 -- Alexandre Detiste <alexandre.detiste@gmail.com>  Sat, 28 Jan 2023 13:28:04 +0100

cruft-ng (0.9.51) unstable; urgency=medium

  * New upload to Mentors, fixing copyright attribution of mlocate_db.h
    as hinted by FTP-Master.

 -- Alexandre Detiste <alexandre.detiste@gmail.com>  Fri, 27 Jan 2023 10:14:52 +0100

cruft-ng (0.9.50) unstable; urgency=medium

  * new "dh-cruft" binary package: this DebHelper module is to be used
    by source package that wants to provide their own rules.
  * update filters for: grafana, npm, python3-pip, cron*, debconf.
  * add support for nginx.deb from nginx.org.
  * ship documentation in .deb in ASCII and .png formats.

  [ Christian Göttsche ]
  * new filters for: dovecot, geoipupdate, php-fm, postfix,
    quassel-core, redis-server, rspamd, strongswan, unbound.

 -- Alexandre Detiste <alexandre.detiste@gmail.com>  Fri, 27 Jan 2023 10:11:08 +0100

cruft-ng (0.9.49) unstable; urgency=medium
