@@ -31,13 +31,6 @@ testing.add('kali-themes')
 testing.add('kali-themes-common')
 testing.add('kali-undercover')
 
-# Add Ubuntu
-testing.add('ubuntu-advantage-tools')
-testing.add('ubuntu-drivers-common')
-testing.add('ubuntu-fan')
-testing.add('ubuntu-mono')
-testing.add('ubuntu-release-upgrader-core')
-
 # Google repository
 testing.add('google-earth-stable')
 
