@@ -7,6 +7,11 @@ cruft-ng (0.9.55~0) UNRELEASED; urgency=medium
   [ NicolasJamar ]
   * refresh misc filters for Debian, Ubuntu & Pop_OS
 
+  [ Alexandre Detiste ]
+  * move the bulk of Ubuntu rules out of the way,
+    only handle /etc/NetworkManager/system-connections/*
+    on Debian (LP: #2019940)
+
  -- Alexandre Detiste <alexandre.detiste@gmail.com>  Thu, 09 Mar 2023 00:39:20 +0100
 
 cruft-ng (0.9.54) unstable; urgency=medium
